--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,20 @@
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+
+
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
+  margin: 0;  
+  font-family: 'Spoqa Han Sans Neo', 'sans-serif';
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background: #000;
+  color: white;
+
 }
 
 a {
